<resources>
    <string name="app_name">Tripp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_btn_txt">Sign Up</string>
    <string name="tripp">Tripp</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="trip_type_question">What type of trip are you looking for?</string>
    <string name="trip_duration_question">and how long will you be away?</string>
    <string name="fetch_my_trip_btn_txt">Fetch My Trip!</string>
    <string name="loader_text">w
        e\'re finding the \nbest trip for you.</string>
    <string name="you_got_trip">You got </string>
    <string name="it_suits_you">Suits you perfectly</string>
    <string name="view_trip_btn_txt">View Trip</string>
    <string name="i_want_something_else_btn_txt"><u>I want something else</u></string>
    <string-array name="TIME_TYPES">
        <item>weekend</item>
        <item>one week</item>
        <item>two weeks</item>
        <item>three weeks</item>
        <item>one month</item>
    </string-array>

    <string name="trip_summary">Trip Summary</string>
    <string name="paris">Paris</string>
    <string name="book">Book</string>
    <string name="i_want_something_else">I want something else</string>
    <string name="tripp_logo">tripp_logo</string>

</resources>
