<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaaaaa"
    tools:context=".SignScreen">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/map_first_screen">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView

            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="135dp"
            android:contentDescription="@string/tripp"
            android:padding="50dp"
            android:src="@drawable/tripp_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="#ffffff"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="225sp"
            android:layout_height="75sp"
            android:layout_marginTop="100dp"
            android:background="@drawable/sign_up_btn"
            android:gravity="center"
            android:text="@string/sign_up_btn_txt"
            android:textAllCaps="false"
            android:textColor="#aaffffff"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="225sp"
            android:layout_height="75sp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#aaffffff"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_btn" />


    </android.support.constraint.ConstraintLayout>


</FrameLayout>