<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".YouGotCity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tripp_logo"
            android:padding="65dp"
            android:src="@drawable/tripp_logo_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="275sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:id="@+id/top_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/you_got_trip"
                android:textColor="#111111"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/transition_screen_exclamation_mark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/raleway_bold"
                android:text="!"
                android:textColor="#F39DB6"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="@+id/city_text"
                app:layout_constraintStart_toEndOf="@+id/city_text" />

            <TextView
                android:id="@+id/city_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/raleway_bold"
                android:text="city"
                android:textColor="#111111"
                android:textSize="45sp"
                android:layout_marginTop="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_text" />

            <TextView
                android:id="@+id/it_suits_you_perfectly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/it_suits_you"
                android:textColor="#111111"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_text" />

            <TextView
                android:id="@+id/transition_screen_dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/raleway_bold"
                android:text="."
                android:textColor="#9BC4FC"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/it_suits_you_perfectly"
                app:layout_constraintStart_toEndOf="@+id/it_suits_you_perfectly" />


        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/view_trip_btn"
            android:layout_width="310sp"
            android:layout_height="57sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/generate_trip_btn"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="@string/view_trip_btn_txt"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/i_want_something_else_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/i_want_something_else_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/i_want_something_else_btn_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>