<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SelectDaysAndTypeFragment"
    android:background="#ffffff">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            app:layout_constraintTop_toTopOf="parent"
            android:weightSum="100">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:background="#2d2d2d"
                android:orientation="horizontal"
                android:weightSum="100">
                <ImageView
                    android:id="@+id/about_title"
                    android:layout_width="wrap_content"
                    android:layout_height="82dp"
                    android:src="@drawable/trip_preferences_top_bar"
                    app:layout_constraintTop_toTopOf="parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="45"
                android:orientation="vertical"
                android:weightSum="100">
                <TextView
                    android:id="@+id/top_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/trip_type_question"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:fontFamily="@font/raleway_black"
                    android:textColor="#000000"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp">
                </TextView>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="45"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/select_days_and_type_fragment_img_margin"
                    android:weightSum="100">
                    <ImageView
                        android:id="@+id/img_right_top"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:padding="2dp"
                        android:layout_margin="@dimen/select_days_and_type_fragment_img_margin"
                        android:scaleType="fitXY"
                        android:background="@drawable/selectable_btn"
                        android:src="@drawable/site_seeing"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/img_left_top"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:padding="2dp"
                        android:layout_margin="@dimen/select_days_and_type_fragment_img_margin"
                        android:scaleType="fitXY"
                        android:background="@drawable/selectable_btn"
                        android:src="@drawable/relaxing"
                        app:layout_constraintTop_toTopOf="parent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="45"
                    android:paddingHorizontal="@dimen/select_days_and_type_fragment_img_margin"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <ImageView
                        android:id="@+id/img_left_bottom"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:padding="2dp"
                        android:layout_margin="@dimen/select_days_and_type_fragment_img_margin"
                        android:scaleType="fitXY"
                        android:background="@drawable/selectable_btn"
                        android:src="@drawable/hiking"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <ImageView
                        android:id="@+id/img_right_bottom"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:padding="2dp"
                        android:layout_margin="@dimen/select_days_and_type_fragment_img_margin"
                        android:scaleType="fitXY"
                        android:background="@drawable/selectable_btn"
                        android:src="@drawable/adventurous"
                        app:layout_constraintTop_toTopOf="parent"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="35"
                android:orientation="vertical"
                android:weightSum="100">
            <TextView
                android:id="@+id/bot_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_black"
                android:text="@string/trip_duration_question"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp">
            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <NumberPicker
                    android:theme="@style/DefaultNumberPickerTheme"
                    android:id="@+id/time_length_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    />
                <NumberPicker
                    android:theme="@style/DefaultNumberPickerTheme"
                    android:id="@+id/time_types_picker"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="40dp"
                    />
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="10"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fetch_my_trip_btn"
                    android:layout_width="310sp"
                    android:layout_height="57sp"
                    android:background="@drawable/generate_trip_btn"
                    android:fontFamily="@font/raleway_bold"
                    android:gravity="center"
                    android:text="@string/fetch_my_trip_btn_txt"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>



</FrameLayout>